# tree-sitter-ink

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  locals.scm  outline.scm  runnables.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comment.txt  corpus.txt  dict.txt  dyad.txt  keywords.txt  ksql.txt  monad.txt
